--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.16.3",
     "lodash": "^4.17.21",
     "mongoose": "6.0"
+  },
+  "devDependencies": {
+    "netlify-cli": "^13.2.2"
   }
 }
